--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.17.3",
+    "chart.js": "^4.4.4",
     "craco-less": "^3.0.1",
     "file-saver": "^2.0.5",
     "firebase": "^10.12.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
