--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.12.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
