--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "antd": "^5.17.3",
     "chart.js": "^4.4.4",
     "craco-less": "^3.0.1",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.12.2",
+    "i18next": "^23.15.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
-    "sweetalert2": "^11.12.0",
+    "sweetalert2": "^11.14.1",
     "sweetalert2-react-content": "^5.0.7",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
